RESOLVED FIXED56961
Fix resolveLocalFileSystemURL (and sync version) error codes to match the spec
https://bugs.webkit.org/show_bug.cgi?id=56961
Summary Fix resolveLocalFileSystemURL (and sync version) error codes to match the spec
Adam Klein
Reported 2011-03-23 14:04:00 PDT
Fix resolveLocalFileSystemURL (and sync version) error codes to match the spec
Attachments
Patch (16.21 KB, patch)
2011-03-23 14:08 PDT, Adam Klein
no flags
Adam Klein
Comment 1 2011-03-23 14:08:07 PDT
David Levin
Comment 2 2011-03-23 14:20:05 PDT
Seems fine to me. Would like to ericu to look it over and give an ok before I r+ since he is more familiar with the spec.
Eric U.
Comment 3 2011-03-23 17:47:42 PDT
Comment on attachment 86683 [details] Patch LGTM; I'll fix the spec.
WebKit Commit Bot
Comment 4 2011-03-23 20:11:19 PDT
Comment on attachment 86683 [details] Patch Clearing flags on attachment: 86683 Committed r81848: <http://trac.webkit.org/changeset/81848>
WebKit Commit Bot
Comment 5 2011-03-23 20:11:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.