2011-03-23  Adam Klein  <adamk@chromium.org>

Reviewed by David Levin.

        Fix resolveLocalFileSystemURL (and sync version) error codes to match the spec
        https://bugs.webkit.org/show_bug.cgi?id=56961

        * http/tests/filesystem/resolve-uri-expected.txt:
        * http/tests/filesystem/script-tests/resolve-uri.js:
        Added three tests to exercise SECURITY_ERR:
        (runWrongDomain):
        (runWrongPort):
        (runWrongScheme):
        And updated four tests to test error codes:
        (runBogusURL):
        (runWrongProtocol):
        (runNotEnoughSlashes):
        (runNotEnoughSlashes2):
        * http/tests/filesystem/workers/resolve-url-expected.txt:
        * http/tests/filesystem/workers/resolve-url-sync-expected.txt:
        * http/tests/filesystem/workers/script-tests/resolve-url-sync.js:
        Added three tests to exercise SECURITY_ERR:
        (runWrongDomain):
        (runWrongPort):
        (runWrongScheme):
        And updated four tests to test error codes:
        (runBogusURL):
        (runWrongProtocol):
        (runNotEnoughSlashes):
        (runNotEnoughSlashes2):
2011-03-23  Adam Klein  <adamk@chromium.org>

        Reviewed by David Levin.

        Fix resolveLocalFileSystemURL (and sync version) error codes to match the spec
        https://bugs.webkit.org/show_bug.cgi?id=56961

        See error code listing in the Files & Directories spec:
        http://dev.w3.org/2009/dap/file-system/file-dir-sys.html#widl-LocalFileSystemSync-resolveLocalFileSystemSyncURL

        Note that the spec currently only specifies errors for the sync
        version; I've used the same codes for the async version.

        * page/DOMWindow.cpp:
        (WebCore::DOMWindow::resolveLocalFileSystemURL):
        * workers/WorkerContext.cpp:
        (WebCore::WorkerContext::resolveLocalFileSystemURL):
        (WebCore::WorkerContext::resolveLocalFileSystemSyncURL):

Canonical link: https://commits.webkit.org/71664@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81848 268f45cc-cd09-0410-ab3c-d52691b4dbfc